added links to the admin log in and the student login pages

--- a/student_view/templates/home.html
+++ b/student_view/templates/home.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
-<html>
-    <title>
-        Student Profile
-    </title>
+<html lang="en">
+    <head>
+        <title>
+            Socrates Home Page
+        </title>
+    </head>
+    <body>
+        <h1>
+            Socrates Home Page
+        </h1>
+        <div>
+            <a href="{% url 'login' %}">Login</a>
+        </div>
+        <a href="{% url 'admin:index' %}">Admin Login</a>
+    </body>
+    
 </html>
