The due date is displayed next to the class and students can visit the assignment page for details

--- a/student_view/templates/student_profile.html
+++ b/student_view/templates/student_profile.html
@@ -11,7 +11,8 @@
          </div>
          {% for assignment in course_assignments %}
             <div>
-                <h2>{{ assignment.title }}</h2>
+                <a href="{% url 'view_assignment' assignment.title %}"> {{ assignment.title }}</a>
+                <p>Due Date: {{ assignment.due_date }}</p>
             </div>
          {% endfor %}
          <h1>
