--- a/student_view/templates/assignment.html
+++ b/student_view/templates/assignment.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>{{ assignment.title }}</title>
-    </head>
-    <body>
-        <h2>{{ assignment.title }}</h2>
-        <p> Due Date: {{ assignment.due_date }} </p>
-        <p>{{ assignment.description }}</p>
+{% extends 'student_view_base.html' %}
 
-    </body>
-</html>
+{% block title %}
+    {{ assignment.title }}
+{% endblock %}
+
+{% block content %}
+    <h2>{{ assignment.title }}</h2>
+    <p> Due Date: {{ assignment.due_date }} </p>
+    <p>{{ assignment.description }}</p>
+{% endblock %}
