--- a/student_view/templates/home.html
+++ b/student_view/templates/home.html
@@ -1,18 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>
-            Socrates Home Page
-        </title>
-    </head>
-    <body>
-        <h1>
-            Socrates Home Page
-        </h1>
-        <div>
-            <a href="{% url 'login' %}">Login</a>
-        </div>
-        <a href="{% url 'admin:index' %}">Admin Login</a>
-    </body>
-    
-</html>
+{% extends 'student_view_base.html' %}
+
+
+{% block title %}
+    Socrates Home Page
+{% endblock %}
+
+
+{% block content %}
+    <h1>Socrates Home Page</h1>
+    <div>
+        <a href="{% url 'login' %}">Login</a>
+    </div>
+    <a href="{% url 'admin:index' %}">Admin Login</a>
+{% endblock %}
