--- a/student_view/templates/assignment.html
+++ b/student_view/templates/assignment.html
@@ -1,7 +1,13 @@
 {% extends 'student_view_base.html' %}
+{% load static %}
 
 {% block title %}
     {{ assignment.title }}
+{% endblock %}
+
+{% block style %}
+<link rel="stylesheet" type="text/css" 
+href="{% static 'student_view/sidebar.css' %}">   
 {% endblock %}
 
 {% block content %}
