--- a/student_view/templates/home.html
+++ b/student_view/templates/home.html
@@ -1,8 +1,13 @@
 {% extends 'student_view_base.html' %}
-
+{% load static %}
 
 {% block title %}
     Socrates Home Page
+{% endblock %}
+
+{% block style %}
+<link rel="stylesheet" type="text/css" 
+href="{% static 'student_view/sidebar.css' %}">    
 {% endblock %}
 
 
