--- a/student_view/templates/student_profile.html
+++ b/student_view/templates/student_profile.html
@@ -1,14 +1,19 @@
 {% extends 'student_view_base.html' %}
+{% load static %}
 
 
 {% block title %}
     {{ user.first_name }} {{ user.last_name }} profile
 {% endblock %}
 
+{% block style %}
+    <link rel="stylesheet" type="text/css" 
+    href="{% static 'student_view/sidebar.css' %}">
+{% endblock %}
 
 {% block content %}
     <div>
-        <h1>Assignments</h1>
+        <h1>Relevant Assignments</h1>
     </div>
     {% for assignment in course_assignments %}
     <div>
