--- a/student_view/templates/student_view_base.html
+++ b/student_view/templates/student_view_base.html
@@ -2,10 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        {% block style %}
+        {% endblock %}
         <title>
             {% block title %}
             {% endblock %}
         </title>
+        
     </head>
     <body>
       {% block content %}
