Templates now set up so that you can add a base style and once logged in you see sidebar

--- a/student_view/templates/assignment.html
+++ b/student_view/templates/assignment.html
@@ -1,13 +1,8 @@
-{% extends 'student_view_base.html' %}
+{% extends 'base_view_side_bar.html' %}
 {% load static %}
 
 {% block title %}
     {{ assignment.title }}
-{% endblock %}
-
-{% block style %}
-<link rel="stylesheet" type="text/css" 
-href="{% static 'student_view/sidebar.css' %}">   
 {% endblock %}
 
 {% block content %}
