--- a/student_view/templates/home.html
+++ b/student_view/templates/home.html
@@ -1,15 +1,9 @@
-{% extends 'student_view_base.html' %}
+{% extends 'base_view_side_bar.html' %}
 {% load static %}
 
 {% block title %}
     Socrates Home Page
 {% endblock %}
-
-{% block style %}
-<link rel="stylesheet" type="text/css" 
-href="{% static 'student_view/sidebar.css' %}">    
-{% endblock %}
-
 
 {% block content %}
     <h1>Socrates Home Page</h1>
