--- a/student_view/templates/student_view_base.html
+++ b/student_view/templates/student_view_base.html
@@ -1,7 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" type="text/css"
+        href="{% static 'student_view/base_design.css' %}"
         {% block style %}
         {% endblock %}
         <title>
