--- a/student_view/templates/student_view_base.html
+++ b/student_view/templates/student_view_base.html
@@ -14,6 +14,11 @@
         
     </head>
     <body>
+        <div class=banner>
+            <h2 class=banner-text>Wartburg MCSP</h2>
+        </div>
+        {% block sidebar %}
+        {% endblock %}
       {% block content %}
       {% endblock %}
     </body>
