--- a/student_view/templates/student_view_base.html
+++ b/student_view/templates/student_view_base.html
@@ -4,12 +4,12 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css"
-        href="{% static 'student_view/base_design.css' %}"
+        href="{% static 'student_view/base_design.css' %}">
         {% block style %}
         {% endblock %}
         <title>
-            {% block title %}
-            {% endblock %}
+        {% block title %}
+        {% endblock %}
         </title>
         
     </head>
@@ -17,8 +17,14 @@
         <div class=banner>
             <h2 class=banner-text>Wartburg MCSP</h2>
         </div>
-        {% block sidebar %}
-        {% endblock %}
+        
+        <div class=sidebar>
+            {% for course in student_courses %}
+            <div>
+            <a href="{% url 'view_course' course.title %}"> {{ course.title }} </a>
+            </div>
+            {% endfor %}
+        </div>
       {% block content %}
       {% endblock %}
     </body>
