--- a/student_view/static/student_view/sidebar.css
+++ b/student_view/static/student_view/sidebar.css
@@ -1,7 +1,14 @@
 .sidebar{
-    background-color: white;
+    background-color: rgb(78, 78, 78);
     margin: 10px;
     border: 5px;
     padding: 20px;
     float: right;
+}
+
+.sidebar_text{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    line-height: 35px;
+    color: #ff8103;
 }
