Assignments are now viewable by visiting the respective course page

--- a/student_view/templates/course.html
+++ b/student_view/templates/course.html
@@ -4,3 +4,12 @@
 {% block title %}
 {{ course.title }}
 {% endblock %}
+
+{% block content %}
+<h3>{{ course.title }}</h3>
+{% for assignment in courses_assignments %}
+<div class = each_assignment>
+    <a href="{% url 'view_assignment' assignment.title %}"> {{ assignment.title }}</a>
+</div>
+{% endfor %}
+{% endblock %}
