--- a/student_view/templates/assignment.html
+++ b/student_view/templates/assignment.html
@@ -1,12 +1,20 @@
 {% extends 'view_and_sidebar.html' %}
 {% load static %}
 
+{% block style %}
+<link rel="stylesheet" type="text/css" 
+ href="{% static 'student_view/assignments.css' %}"> 
+{% endblock %}
+
 {% block title %}
     {{ assignment.title }}
 {% endblock %}
 
 {% block content %}
-    <h2>{{ assignment.title }}</h2>
+<div>
+    <h2 class = title>{{ assignment.title }}</h2>
     <p> Due Date: {{ assignment.due_date }} </p>
     <p>{{ assignment.description }}</p>
+</div>
+    
 {% endblock %}
