--- a/student_view/templates/view_and_sidebar.html
+++ b/student_view/templates/view_and_sidebar.html
@@ -1,6 +1,9 @@
 {% extends 'student_view_base.html' %}
 {% load static %}
 
+{% block style %}
+{% endblock %}
+
 {% block sidebar %}
 <div class=sidebar>
         <a href = "{% url 'student_profile_view' %}" class = sidebar_text> Home </a>
