Added logout on sidebar. Added banner to login page

--- a/student_view/templates/view_and_sidebar.html
+++ b/student_view/templates/view_and_sidebar.html
@@ -16,6 +16,9 @@
         <div>
         <a href = "{% url 'view_grades' %}" class = sidebar_text> Grades </a>       
         </div>
+        <div>
+        <a href="{% url 'logout' %}" class = sidebar_text>Logout</a>
+        </div>
         
 </div>
 {% endblock %}
