--- a/student_view/templates/registration/login.html
+++ b/student_view/templates/registration/login.html
@@ -1,9 +1,6 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title></title>
-    </head>
-    <body>
+{% extends 'student_view_base.html' %}
+
+    {% block content %}
         {% if form.errors %}
         <p>Your username and password didn't match. Please try again.</p>
         {% endif %}
@@ -36,5 +33,4 @@
 
         {# Assumes you setup the password_reset view in your URLconf #}
         <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
-    </body>
-</html>
+    {% endblock %}
