Added js files to the static files and allowed for .js functionality

--- a/student_view/templates/assignment.html
+++ b/student_view/templates/assignment.html
@@ -3,7 +3,7 @@
 
 {% block style %}
 <link rel="stylesheet" type="text/css" 
- href="{% static 'student_view/assignments.css' %}"> 
+ href="{% static 'student_view/css/assignments.css' %}"> 
 {% endblock %}
 
 {% block title %}
@@ -15,6 +15,9 @@
     <h2 class = title>{{ assignment.title }}</h2>
     <p> Due Date: {{ assignment.due_date }} </p>
     <p>{{ assignment.description }}</p>
+</div>
+<div>
+    <input type="file">
 </div>
     
 {% endblock %}
