--- a/student_view/static/student_view/css/assignments.css
+++ b/student_view/static/student_view/css/assignments.css
@@ -6,6 +6,7 @@
     padding: 5px 5px 5px 5px;
     background-color: #f4f4f4;
     width: 400px;
+    cursor: pointer;
 }
 
 .assignment{
@@ -13,4 +14,8 @@
     border: 5px;
     border-color: #ff8103;
     color:#ff8103;
+}
+
+.assignment_container:hover{
+    background-color: rgb(200, 200, 200);
 }
