--- a/student_view/templates/course.html
+++ b/student_view/templates/course.html
@@ -3,7 +3,8 @@
 
 {% block style %}
 <link rel="stylesheet" type="text/css" 
- href="{% static 'student_view/assignments.css' %}"> 
+ href="{% static 'student_view/css/assignments.css' %}">
+ 
 {% endblock %}
 
 {% block title %}
@@ -18,4 +19,8 @@
     <p>Due Date: {{ assignment.due_date }}</p>
 </div>
 {% endfor %}
+{% endblock %}
+
+{% block script %}
+<script type = "text/javascript" src = "{% static 'student_view/js/assignments.js' %}" ></script>
 {% endblock %}
