--- a/student_view/templates/student_view_base.html
+++ b/student_view/templates/student_view_base.html
@@ -4,9 +4,9 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css"
-        href="{% static 'student_view/base_design.css' %}">
+        href="{% static 'student_view/css/base_design.css' %}">
         <link rel="stylesheet" type="text/css"
-        href="{% static 'student_view/sidebar.css' %}">
+        href="{% static 'student_view/css/sidebar.css' %}">
         {% block style %}
         {% endblock %}
         <title>
@@ -20,11 +20,13 @@
             <h2 class=banner-text>Wartburg MCSP</h2>
         </div>
         {% block sidebar %}
-        {% endblock %}
-        
+        {% endblock %}        
 
-      {% block content %}
-      {% endblock %}
+        {% block content %}
+        {% endblock %}
+
+        {% block script %}
+        {% endblock %}
     </body>
     
 </html>
