added the discussion and handouts page to the sidebar.

--- a/student_view/static/student_view/css/assignments.css
+++ b/student_view/static/student_view/css/assignments.css
@@ -9,15 +9,15 @@
     cursor: pointer;
 }
 
+.assignment_container:hover{
+    background-color: rgb(200, 200, 200);
+}
+
 .assignment{
     border-style: solid;
     border: 5px;
     border-color: #ff8103;
     color:#ff8103;
-}
-
-.assignment_container:hover{
-    background-color: rgb(200, 200, 200);
 }
 
 .assignment_title{
@@ -37,4 +37,25 @@
     border-bottom-style: solid;
     border-bottom-color: #ff8103;
     border-bottom-width: 2px;
+}
+
+.assignment_due_date{
+    margin:10px;
+    font-size:20px;
+}
+
+.assignment_button{
+    margin:10px;
+    border:solid black 1px;
+    border-radius: 5px;
+    padding:5px;
+    background-color: #ff8103;
+    color: black;
+    font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
+    cursor: pointer;
+}
+
+.assignment_button:hover{
+    background-color: #f5993d;
 }
