--- a/student_view/templates/view_and_sidebar.html
+++ b/student_view/templates/view_and_sidebar.html
@@ -11,6 +11,12 @@
         </div>
         {% endfor %}
         <div>
+        <a href = "{% url 'view_handouts' %}" class = sidebar_text> Handouts </a>       
+        </div>
+        <div>
+        <a href = "{% url 'view_discussion' %}" class = sidebar_text> Discussion </a>       
+        </div>
+        <div>
         <a href = "{% url 'view_grades' %}" class = sidebar_text> Grades </a>       
         </div>
         <div>
