"Changed assignment styling"

--- a/student_view/templates/student_view/assignment.html
+++ b/student_view/templates/student_view/assignment.html
@@ -19,6 +19,7 @@
 </div>
 <div>
     <input class = submit_assignment type = "file" hidden=hidden>
+    <input type="submit">
     <button class = assignment_button type="button">Submit File</button>
 </div>
 {% endblock %}
