Renamed base template to base.html

--- a/student_view/templates/student_view/registration/login.html
+++ b/student_view/templates/student_view/registration/login.html
@@ -1,4 +1,4 @@
-{% extends 'student_view/student_view_base.html' %}
+{% extends 'student_view/base.html' %}
 
     {% block content %}
         {% if form.errors %}
