Added text that displays the filename after selecting a file

--- a/student_view/templates/student_view/assignment.html
+++ b/student_view/templates/student_view/assignment.html
@@ -18,9 +18,11 @@
     
 </div>
 <div>
-    <input class = submit_assignment type = "file" hidden=hidden>
-    <input type="submit">
-    <button class = assignment_button type="button">Submit File</button>
+    <input class = hidden_button type = "file" hidden=hidden>
+    <button class = assignment_button type="button">Select File</button>
+    <span id=custom_text>Empty</span>
+    <input class = submit_assignment type = "submit">
+    
 </div>
 {% endblock %}
 
