--- a/student_view/templates/student_view/student_profile.html
+++ b/student_view/templates/student_view/student_profile.html
@@ -10,7 +10,9 @@
 <link rel = "stylesheet" type = "text/css" 
  href="{% static 'student_view/css/sidebar.css' %}">
 <link rel = "stylesheet" type = "text/css" 
- href = "{% static 'student_view/css/assignments.css' %}">      
+ href = "{% static 'student_view/css/assignments.css' %}">
+ <link rel = "stylesheet" type = "text/css" 
+ href = "{% static 'student_view/css/handouts.css' %}">       
 {% endblock %}
 
 {% block content %}
@@ -26,6 +28,16 @@
     {% endfor %}
     </div>
     
+    <div class=recent_handouts>
+        <h2 class=title>Recent Handouts</h2>
+        {% for handout in handouts %}
+        <div class = handout_container>
+        <a class = "handout" href = "{{ handout.handout }}" _target=blank> {{ handout.title }}</a>
+        <p>{{ handout.course }}</p>
+        </div>
+        {% endfor %}
+    </div>
+
     <h2>
         {{ user.first_name }} {{ user.last_name }} Information
     </h2>
@@ -34,4 +46,5 @@
 
 {% block script %}
 <script type = "text/javascript" src = "{% static 'student_view/js/assignments.js' %}" ></script>
+<script type = "text/javascript" src = "{% static 'student_view/js/handouts.js' %}" ></script>
 {% endblock %}
