--- a/teacher_view/templates/teacher_view/navbar.html
+++ b/teacher_view/templates/teacher_view/navbar.html
@@ -8,14 +8,14 @@
 
 {% block content %}
 <div class="navbar">
-    <a href="home">Home</a>
-    <a href="#news">News</a>
+    <a href="teacher profile">Home</a>
+    <a href="staff course create">News</a>
     <div class="dropdown">
       <button class="dropbtn">Courses 
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-content">
-        <a href="#">Add Course</a>
+        <a href="staff course create">Add Course</a>
         <a href="#">Link 2</a>
         <a href="#">Link 3</a>
       </div>
