Assignments are displayed on the courss page under previous and upcoming assignments

--- a/student_view/templates/student_view/base.html
+++ b/student_view/templates/student_view/base.html
@@ -20,7 +20,10 @@
             <h2 class=banner-text>Wartburg MCSP</h2>
         </div>
         {% block sidebar %}
-        {% endblock %}        
+        {% endblock %}
+        
+        {% block navbar %}
+        {% endblock %}
 
         {% block content %}
         {% endblock %}
