--- a/teacher_view/templates/teacher_view/navbar.html
+++ b/teacher_view/templates/teacher_view/navbar.html
@@ -6,7 +6,7 @@
         href="{% static 'teacher_view/css/navbar.css' %}">
 {% endblock %}
 
-{% block content %}
+{% block navbar %}
 <div class="navbar">
     <a href="{% url 'staff_profile' %}">Home</a>
     <a href="staff course create">News</a>
@@ -23,6 +23,4 @@
       </div>
     </div> 
   </div>
-
-
 {% endblock %}
