--- a/teacher_view/templates/teacher_view/course_page.html
+++ b/teacher_view/templates/teacher_view/course_page.html
@@ -1,4 +1,5 @@
 {% extends 'teacher_view/navbar.html' %}
+{% load static %}
 
 {% block content %}
 <h2>{{ current_course.title }}</h2>
@@ -16,4 +17,15 @@
     <p>Due Date: {{ assignment.due_date }}</p>
 </div>
 {% endfor %}
+{% endblock %}
+
+{% block style %}
+<link rel="stylesheet" type="text/css"
+href="{% static 'teacher_view/css/navbar.css' %}">
+<link rel="stylesheet" type="text/css"
+href="{% static 'student_view/css/assignments.css' %}">
+{% endblock %}
+
+{% block script %}
+<script type = "text/javascript" src = "{% static 'student_view/js/assignments.js' %}" ></script>
 {% endblock %}
