--- a/teacher_view/templates/teacher_view/create_class.html
+++ b/teacher_view/templates/teacher_view/create_class.html
@@ -1,1 +1,23 @@
 {% extends 'teacher_view/navbar.html' %}
+{% load static %}
+
+{% block style %}
+<link rel="stylesheet" type="text/css"
+        href="{% static 'teacher_view/css/course.css' %}">
+<link rel="stylesheet" type="text/css"
+        href="{% static 'teacher_view/css/navbar.css' %}">
+{% endblock %}
+
+{% block content %}
+<form method="POST" enctype="multipart/form-data">
+    {% csrf_token %}
+    <input class = hidden_button type = "file" hidden = hidden name = class_file>
+    <button class = class_button type = "button">Select File</button>
+    <span id = custom_text>Empty</span>
+    <input class = submit_assignment type = "submit">
+</form>
+{% endblock %}
+
+{% block script %}
+<script type = "text/javascript" src = "{% static 'teacher_view/js/course.js' %}" ></script>
+{% endblock %}
