Clicking assignment button on teach_view navigates to edit

--- a/teacher_view/templates/teacher_view/course_page.html
+++ b/teacher_view/templates/teacher_view/course_page.html
@@ -6,14 +6,14 @@
 <h2>Upcoming Assingments</h2>
 {% for assignment in upcoming_assignments %}
 <div class = assignment_container>
-    <a class = assignment href="{% url 'view_assignment' assignment.title %}"> {{ assignment.title }}</a>
+    <a class = assignment href="{% url 'edit_assignment' assignment.title %}"> {{ assignment.title }}</a>
     <p>Due Date: {{ assignment.due_date }}</p>
 </div>
 {% endfor %}
 <h2>Past Assignments</h2>
 {% for assignment in past_assignments %}
 <div class = assignment_container>
-    <a class = assignment href="{% url 'view_assignment' assignment.title %}"> {{ assignment.title }}</a>
+    <a class = assignment href="{% url 'edit_assignment' assignment.title %}"> {{ assignment.title }}</a>
     <p>Due Date: {{ assignment.due_date }}</p>
 </div>
 {% endfor %}
