teachers can basically edit assignments

--- a/teacher_view/templates/teacher_view/edit_assignment.html
+++ b/teacher_view/templates/teacher_view/edit_assignment.html
@@ -1,1 +1,14 @@
 {% extends 'teacher_view/navbar.html' %}
+
+{% block content %}
+<form method="POST" enctype="multipart/form-data">
+    {% csrf_token %}
+    <h3>Assignment Title:</h3>
+    <input name=title type="text" value={{ assignment.title }}>
+    <h3>Assignment Description:</h3>
+    <textarea name=description value={{ assignment.description }} rows="5" cols="80"></textarea>
+    <h3>Assignment Due Date:</h3>
+    <input name=due_date value={{ assignment.due_date }} type="datetime-local">
+    <input type="submit">
+</form>
+{% endblock %}
