Students in course are displayed

--- a/teacher_view/templates/teacher_view/navbar.html
+++ b/teacher_view/templates/teacher_view/navbar.html
@@ -9,7 +9,7 @@
 {% block navbar %}
 <div class="navbar">
     <a href="{% url 'staff_profile' %}">Home</a>
-    <a href="staff course create">News</a>
+    <a href="staff course create">Grades</a>
     <div class="dropdown">
       <button class="dropbtn">Courses 
         <i class="fa fa-caret-down"></i>
