teachers can delete assignments

--- a/teacher_view/templates/teacher_view/edit_assignment.html
+++ b/teacher_view/templates/teacher_view/edit_assignment.html
@@ -9,7 +9,8 @@
     <textarea name=description value={{ assignment.description }} rows="5" cols="80"></textarea>
     <h3>Assignment Due Date:</h3>
     <input name=due_date value={{ assignment.due_date }} type="datetime-local">
-    <input type="submit">
+    <input type="submit" name="submit">
+    <input type="submit" name="delete" value="Delete Assignment">
 </form>
 
 <div class=student_homework>
