--- a/teacher_view/templates/teacher_view/navbar.html
+++ b/teacher_view/templates/teacher_view/navbar.html
@@ -19,7 +19,7 @@
         {% for course in current_courses %}
         <a href="{% url 'course_page' course.title %}">{{ course.title }}</a>
         {% endfor %}
-        <a href="{% url 'past_course_page' %}">Past Courses</a>
+        <a href="{% url 'past_courses_page' %}">Past Courses</a>
       </div>
     </div> 
   </div>
