--- a/teacher_view/templates/teacher_view/past_courses.html
+++ b/teacher_view/templates/teacher_view/past_courses.html
@@ -1,1 +1,13 @@
 {% extends 'teacher_view/navbar.html' %}
+
+{% block content %}
+{% for term in past_courses %}
+<p>{{ term.first.term }}</p>
+{% for course in term %}
+<div class = course_container>
+    <a class = course href="{% url 'past_course_page' course.title course.term %}"> {{ course.title }}</a>
+    <p>Due Date: {{ course.course_instructor }}</p>
+</div>
+{% endfor %}
+{% endfor %}
+{% endblock %}
