--- a/teacher_view/templates/teacher_view/course_page.html
+++ b/teacher_view/templates/teacher_view/course_page.html
@@ -28,8 +28,9 @@
 {% endfor %}
 <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
-    <input type="text" name=student_id>
-    <button type="submit">Add Student</button>
+    <input type="text" name=student_id default="Student ID Number">
+    <input type="submit" name=submit value="Add Student">
+    <input type="submit" name="delete" value="Delete Student">
 </form>
 {% endblock %}
 
