Grades is now a drop down of all current courses and directs to an empty templatye

--- a/teacher_view/templates/teacher_view/course_page.html
+++ b/teacher_view/templates/teacher_view/course_page.html
@@ -30,7 +30,7 @@
 {% endfor %}
 <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
-    <input type="text" name=student_id default="Student ID Number">
+    <input type="text" name=student_id placeholder="Student ID Number">
     <input type="submit" name=submit value="Add Student">
     <input type="submit" name="delete" value="Delete Student">
 </form>
