When updating grades, queries right course

--- a/teacher_view/templates/teacher_view/create_class.html
+++ b/teacher_view/templates/teacher_view/create_class.html
@@ -17,3 +17,7 @@
     <input class = submit_assignment type = "submit">
 </form>
 {% endblock %}
+
+{% block script %}
+<script type = "text/javascript" src = "{% static 'teacher_view/js/course.js' %}" ></script>
+{% endblock %}
