--- a/student_view/templates/student_view/course.html
+++ b/student_view/templates/student_view/course.html
@@ -13,6 +13,7 @@
 
 {% block content %}
 <h2 class = title>{{ course.title }}</h2>
+<h2>Grade: {{ grade.letter_grade }}</h2>
 {% for assignment in courses_assignments %}
 <div class = assignment_container>
     <a class = assignment href="{% url 'view_assignment' assignment.title %}"> {{ assignment.title }}</a>
