--- a/student_view/templates/student_view/view_and_sidebar.html
+++ b/student_view/templates/student_view/view_and_sidebar.html
@@ -11,6 +11,9 @@
         </div>
         {% endfor %}
         <div>
+        <a href = "{% url 'view_past_courses' %}" class = sidebar_text> Past Courses </a>       
+        </div>
+        <div>
         <a href = "{% url 'view_handouts' %}" class = sidebar_text> Handouts </a>       
         </div>
         <div>
