--- a/teacher_view/templates/teacher_view/edit_assignment.html
+++ b/teacher_view/templates/teacher_view/edit_assignment.html
@@ -1,14 +1,22 @@
 {% extends 'teacher_view/navbar.html' %}
+{% load static %}
+
+{% block style %}
+<link rel="stylesheet" type="text/css"
+        href="{% static 'teacher_view/css/assignment.css' %}">
+<link rel="stylesheet" type="text/css"
+        href="{% static 'teacher_view/css/navbar.css' %}">
+{% endblock %}
 
 {% block content %}
 <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     <h3>Assignment Title:</h3>
-    <input name=title type="text" value={{ assignment.title }}>
+    <input name=title type="text" value='{{ assignment.title }}'>
     <h3>Assignment Description:</h3>
-    <textarea name=description value={{ assignment.description }} rows="5" cols="80"></textarea>
+    <textarea name=description class=description value='{{ assignment.description }}' rows="5" cols="80"></textarea>
     <h3>Assignment Due Date:</h3>
-    <input name=due_date value={{ assignment.due_date }} type="datetime-local">
+    <input name=due_date value='{{ assignment.due_date }}' type="datetime-local">
     <input type="submit" name="submit">
     <input type="submit" name="delete" value="Delete Assignment">
 </form>
