--- a/student_view/templates/student_view/past_courses.html
+++ b/student_view/templates/student_view/past_courses.html
@@ -6,7 +6,7 @@
 {% for course in term %}
 <div class = course_container>
     <a class = course href="{% url 'past_course_page' course.title course.term %}"> {{ course.title }}</a>
-    <p>Due Date: {{ course.course_instructor }}</p>
+    <p>Professor: {{ course.course_instructor }}</p>
 </div>
 {% endfor %}
 {% endfor %}
