login page redirects teachers and students to various home pages

--- a/student_view/templates/student_view/home.html
+++ b/student_view/templates/student_view/home.html
@@ -7,7 +7,7 @@
 
 {% block content %}
     <div>
-        <a href="{% url 'login' %}">Login</a>
+        <a href="{% url 'login_page' %}">Login</a>
     </div>
     <a href="{% url 'admin:index' %}">Admin Login</a>
 {% endblock %}
