--- a/login/templates/login/login.html
+++ b/login/templates/login/login.html
@@ -1,16 +1,14 @@
 {% extends 'student_view/base.html' %}
 
-{% block 'title' %}
+{% block title %}
 <title>Log In</title>
 {% endblock %}
 
-{% block 'body' %}
+{% block body %}
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <input type=text id=username name=username>
     <input type=password id=password name=password>
     <button type="submit" id=login_button>Log In</button>
 </form>
-
-
 {% endblock %}
