--- a/student_view/templates/student_view/base.html
+++ b/student_view/templates/student_view/base.html
@@ -9,10 +9,8 @@
         href="{% static 'student_view/css/sidebar.css' %}">
         {% block style %}
         {% endblock %}
-        <title>
         {% block title %}
         {% endblock %}
-        </title>
         
     </head>
     <body>
@@ -26,6 +24,9 @@
         {% endblock %}
 
         {% block content %}
+        {% endblock %}
+
+        {% block body %}
         {% endblock %}
 
         {% block script %}
