--- a/teacher_view/templates/teacher_view/navbar.html
+++ b/teacher_view/templates/teacher_view/navbar.html
@@ -8,10 +8,12 @@
 
 {% block navbar %}
 <div class="navbar">
-    <a href="{% url 'staff_profile' %}">Home</a>
+    <a href="{% url 'staff_home_page' %}" id="nav-home">Home</a>
+
+
 
     <div class="dropdown">
-        <button class="dropbtn">Grades
+        <button class="dropbtn" id="nav-grades">Grades
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
@@ -22,10 +24,11 @@
     </div>
 
     <div class="dropdown">
-      <button class="dropbtn">Courses 
+      <button class="dropbtn" >Courses 
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-content">
+        <a href="{% url 'staff_courses_page' %}" id="nav-courses">Courses</a>
         <a href="{% url 'staff_course_create' %}">Add Course</a>
         {% for course in current_courses %}
         <a href="{% url 'course_page' course.title %}">{{ course.title }}</a>
