--- a/teacher_view/templates/teacher_view/navbar.html
+++ b/teacher_view/templates/teacher_view/navbar.html
@@ -24,12 +24,12 @@
     </div>
 
     <div class="dropdown">
-      <button class="dropbtn" >Courses 
+      <button class="dropbtn" id="nav-courses">Courses 
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-content">
-        <a href="{% url 'staff_courses_page' %}" id="nav-courses">Courses</a>
-        <a href="{% url 'staff_add_course_page' %}">Add Course</a>
+        <a href="{% url 'staff_courses_page' %}" id="curr-courses">Courses</a>
+        <a href="{% url 'staff_add_course_page' %}" id="add-course">Add Course</a>
         {% for course in current_courses %}
         <a href="{% url 'course_page' course.title %}">{{ course.title }}</a>
         {% endfor %}
