finished first functional test

--- a/teacher_view/templates/teacher_view/create_class.html
+++ b/teacher_view/templates/teacher_view/create_class.html
@@ -16,7 +16,7 @@
     <span id = custom_text>Empty</span>-->
     {{ file_form }}
     <!--<input class = submit_assignment type = "submit">-->
-    <button type="submit" name="file-submit">Submit</button>
+    <button type="submit" name="file-submit" id="file-submit">Submit</button>
 </form>
 {% endblock %}
 
