--- a/teacher_view/templates/teacher_view/navbar.html
+++ b/teacher_view/templates/teacher_view/navbar.html
@@ -31,7 +31,7 @@
         <a href="{% url 'staff_courses_page' %}" id="curr-courses">Courses</a>
         <a href="{% url 'staff_add_course_page' %}" id="add-course">Add Course</a>
         {% for course in current_courses %}
-        <a href="{{ course.get_absolute_url }}">{{ course.title }}</a>
+        <a href="{{ course.get_absolute_url }}" id="course-{{ course.pk }}-link">{{ course.title }}</a>
         {% endfor %}
         <a href="{% url 'past_courses_page' %}">Past Courses</a>
       </div>
