--- a/teacher_view/templates/teacher_view/course_page.html
+++ b/teacher_view/templates/teacher_view/course_page.html
@@ -23,7 +23,7 @@
 </div>
 {% endfor %}
 <div class = assignment_container>
-    <a class = assignment href="{% url 'add_assignment' %}" id="create-assignment-link"> Create Assignment</a>
+    <a class = assignment href="{% url 'add_assignment' current_course.pk %}" id="create-assignment-link"> Create Assignment</a>
     <p>Due Date: {{ assignment.due_date }}</p>
 </div>
 
