--- a/teacher_view/templates/teacher_view/course_page.html
+++ b/teacher_view/templates/teacher_view/course_page.html
@@ -11,8 +11,9 @@
 <h2>Upcoming Assingments</h2>
 {% for a in assignments %}
 <div class = assignment_container>
-    <a class="assignment" id="assignment_{{ a.pk }}" href="{% url 'edit_assignment' a.title %}"> {{ a.title }}</a>
+    <a class="assignment" id="assignment_{{ a.pk }}"> {{ a.title }}</a>
     <p id="assignment_{{ a.pk }}_due_date">Due Date: {{ a.due_date|date:"Y-m-d H:i:s" }}</p>
+    <a href="{% url 'staff_edit_assignment_page' assignment_id=a.pk %}" id="edit_assignment_{{ a.pk }}">Edit {{ a.title }}</a>
 </div>
 {% endfor %}
 <div class = assignment_container>
