--- a/teacher_view/templates/teacher_view/courses.html
+++ b/teacher_view/templates/teacher_view/courses.html
@@ -5,3 +5,11 @@
     Courses
 </title>
 {% endblock %}
+
+{% block body %}
+{% for c in all_courses %}
+<div class="course_container">
+    <a href="{% url 'staff_course_page' course_id=c.pk %}">{{ c.title }}</a>
+</div>
+{% endfor %}
+{% endblock %}
